2011-05-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* NEWS: Mention new library gnutls.el and explain GnuTLS
	functionality.  Mention new configure.bat options --without-gnutls
	and --lib for W32.

2011-05-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* NEWS: Mention `url-retrieve-queue', (:file "file") and
	`server-eval-at'.

2011-04-28  Juanma Barranquero  <lekktu@gmail.com>

	* NEWS: Document `delayed-warnings-list' and `delayed-warnings-hook'.
	Document new "default HOME" warning.

2011-04-26  Daniel Colascione  <dan.colascione@gmail.com>

	* DEBUG: Document debug-on-event default behavior and utility for
	debugging.

2011-04-22  Noah Friedman  <friedman@splode.com>

	* emacs-buffer.gdb: Add trailing underscores to appropriate member
	names, per change tromey@redhat.com-20110214153919-bxkckrdmmg4qhyyj
	of src/lisp.h.

2011-04-08  Christoph Scholtes  <cschol2112@googlemail.com>

	* NEWS: Document new function `vc-ediff'.

2011-04-06  Juanma Barranquero  <lekktu@gmail.com>

	* NEWS: New variable `revert-buffer-in-progress-p'.

2011-03-22  Sebastian Hermida  <sebas00@gmail.com>

	* themes/misterioso-theme.el: New file.

2011-03-16  Juanma Barranquero  <lekktu@gmail.com>

	* NEWS: Document warning about _emacs.

2011-03-14  Michael Albinus  <michael.albinus@gmx.de>

	* NEWS: `shell' prompts for the shell path name, when the default
	directory is a remote file name and neither environment variable
	$ESHELL nor variable `explicit-shell-file-name' is set.

2011-03-08  Kristoffer Grönlund  <krig@koru.se>

	* themes/wombat-theme.el: New file.

2011-03-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.3 released.

2011-03-06  Juanma Barranquero  <lekktu@gmail.com>

	* srecode/el.srt: Fix typo.

2011-02-21  Chong Yidong  <cyd@stupidchicken.com>

	* themes/tango-dark-theme.el: Tweak background on low-color
	terminals.

2011-02-17  Ken Manheimer  <ken.manheimer@gmail.com>

	* etc/images/icons/allout-widgets/dark-bg,
	* etc/images/icons/allout-widgets/light-bg,