@@ -1,3 +1,7 @@
+2011-05-03  Leo Liu  <sdl.web@gmail.com>
+
+	* NEWS: Mention the new command isearch-yank-pop.
+
 2011-05-03  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* NEWS: Mention new library gnutls.el and explain GnuTLS
